# vehicleCAN_GT_acquisition

./: README.md
1.vehicle_msgs_canpal/: CMakeLists.txt  package.xml
1.vehicle_msgs_canpal/launch/: vehicle_msgs_canpal_a27.launch  vehicle_msgs_canpal_c11.launch
1.vehicle_msgs_canpal/msg/: VehicleStamped.msg
1.vehicle_msgs_canpal/src/: vehicle_msgs_canpal_a27.cpp  vehicle_msgs_canpal_c11.cpp
1.vehicle_msgs_canpal/src/lib/dbc/a27/: a27.cpp  a27.h
1.vehicle_msgs_canpal/src/lib/dbc/c11/: c11.cpp  c11.h
1.vehicle_msgs_canpal/src/lib/wiican/: wiican_driver.h
1.vehicle_msgs_canpal/src/lib/wiican/debug/: libWIICAN.so.1.0
1.vehicle_msgs_canpal/src/lib/wiican/release/: libWIICAN.so.1
2.gps_rtk_msgs_NAV982-RG/: CMakeLists.txt  package.xml
2.gps_rtk_msgs_NAV982-RG/include/: gps_rtk_worker.h
2.gps_rtk_msgs_NAV982-RG/launch/: gps_rtk_msgs_NAV982-RG.launch  gps_rtk_msgs_ttyUSB_NAV982-RG.launch
2.gps_rtk_msgs_NAV982-RG/src/: gps_rtk_msgs.cpp
2.gps_rtk_msgs_NAV982-RG/src/lib_src/: an_packet_protocol.cpp  gps_rkt_worker.cpp  spatial_packets.cpp
3.robot_localization_gt_NAV982-RG/: CMakeLists.txt  package.xml
3.robot_localization_gt_NAV982-RG/config/: msckf-mynt_imu_a27_is_calibed_bs.yaml  msckf-mynt_imu_a27_is_svd.yaml
3.robot_localization_gt_NAV982-RG/include/robot_localization/: math_utils.hpp  utils.h
3.robot_localization_gt_NAV982-RG/launch/: gt_tf_broadcaster.launch
3.robot_localization_gt_NAV982-RG/src/: gt_tf_broadcaster.cpp  utils.cpp
3.robot_localization_gt_NAV982-RG/viz/: gps.rviz
