<?xml version="1.0"?>
<package>
  <name>vehicle_msgs_canpal</name>
  <version>0.0.0</version>
  <description>The vehicle_msgs package</description>

  <maintainer email="shijz16@mails.jlu.edu.cn"></maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
<build_depend>rospy</build_depend>
<build_depend>nav_msgs</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<run_depend>rospy</run_depend>
<run_depend>message_generation</run_depend>
<run_depend>nav_msgs</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
<build_depend>rosbag</build_depend>
<run_depend>rosbag</run_depend>
</package>